center align fixed
items are now centered

--- a/wp-content/themes/SSC/style.css
+++ b/wp-content/themes/SSC/style.css
@@ -585,12 +585,12 @@ iframe {
     }
 
     .postcontent {
-        margin-left: 0px!important;
+        margin-left: 20px!important;
         margin-right: 1em!important;
     }
 
     .posttitle {
-        margin-left: 0px!important;
+        margin-left: 20px!important;
     }
 
     .content-text {
